# vix-editor

./: README.md  build.sh  vix  vix_agent  vix_brain.py
.sisyphus/drafts/: vix-upgrade.md
.sisyphus/plans/: vix-editor-upgrade.md
src/: vix_agent.cpp  vix_editor.cpp
src/core/: buffer.cpp  buffer.cpp.orig  buffer.hpp  buffer.hpp.orig
src/history/: history.cpp  history.cpp.orig  history.hpp  history.hpp.orig
tests/: CMakeLists.txt  buffer_test.cpp  buffer_test.cpp.orig  history_test.cpp  history_test.cpp.orig  integration_results.txt  test.cpp  test.py
